--- a/etc/collector.yml
+++ b/etc/collector.yml
@@ -5,7 +5,7 @@ logger:
 
 identity:
   specify: ""
-  shell: ifconfig `route|grep '^default'|awk '{print $NF}'`|grep inet|awk '{print $2}'|awk -F ':' '{print $NF}'|head -n 1
+  shell: /sbin/ifconfig `/sbin/route|grep '^default'|awk '{print $NF}'`|grep inet|awk '{print $2}'|awk -F ':' '{print $NF}'|head -n 1
 
 report:
   url: "http://n9e.zhenaioa.com/api/portal/endpoint"
